--- a/PF_Final/.project
+++ b/PF_Final/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>PF_Final</name>
+	<name>PF_Final2</name>
 	<comment></comment>
 	<projects>
 	</projects>
